--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Fullscreen Background Image Slideshow with CSS3</title>
         <link rel="stylesheet" type="text/css" href="css/background.css" />
+        <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -78,7 +79,7 @@
         <img src="images/horror.png" class="w3-display-bottomleft text-blur-out" style="height:60%;">
         <div class="w3-display-middle">
           <center>
-          <h1 class="maintext text-focus-in">InFinito</h1>
+          <h1 class="maintext text-focus-in" style="font-family: 'IM Fell English SC">InFinito'19</h1>
           <h1 class="datetext"><span id="typed5"></span></h1>
           </center>
         </div>
